<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consta"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/impulse_wall_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about_us">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impulse_wall"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/photo_picker_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_backforbutton"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/cameraLayoyut"
        app:layout_constraintTop_toBottomOf="@id/user_editText">

        <ImageView
            android:id="@+id/image_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_image_white_4dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/photo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cameraLayoyut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_backforbutton"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/user_editText"
        app:layout_constraintTop_toBottomOf="@id/user_editText">

        <ImageView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:src="@drawable/ic_camera_alt_black_24dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/camera" />
    </LinearLayout>

    <ImageView
        android:id="@+id/user_profile_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/aboutus"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/impulse_wall_toolbar" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <EditText
        android:id="@+id/user_editText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_back"
        android:hint="@string/what_s_in_your_mind"
        android:inputType="textMultiLine"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_pic"
        app:layout_constraintEnd_toStartOf="@+id/user_message_send_fab"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/user_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_pic"
        app:layout_constraintVertical_bias="0.52" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/user_message_send_fab"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@color/picker"
        android:clickable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_send_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/user_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_editText"
        app:layout_constraintVertical_bias="0.45999998" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_impulse_wall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border_view"
        tools:listitem="@layout/impulse_wall_item" />

    <View
        android:id="@+id/border_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="#5a999797"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraLayoyut" />

    <ImageView
        android:id="@+id/attachment"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_attachment_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/border_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/user_editText"
        app:layout_constraintTop_toBottomOf="@+id/user_message_send_fab" />


</android.support.constraint.ConstraintLayout>